# OpenStudio-benchmarks

./: CMakeLists.txt  Compare_Benchmarks.ipynb  ConanInstall.cmake  FindOpenStudioSDK.cmake  README.md  run_benchmark.py
energyplus/: ForwardTranslator_Benchmark.cpp
model/: Model_Benchmark.cpp  Model_ModelObjects_Benchmark.cpp  ThermalZoneCombineSpaces_Benchmark.cpp  Vector_remove_vs_copy_Benchmark.cpp
osversion/: VersionTranslation_Benchmark.cpp
resources/: resources.hxx.in
utilities/: IddObjectParse_Benchmark.cpp  IdfFileGetObjects_Benchmark.cpp  IdfObjectParse_Benchmark.cpp  LoadIdd_Benchmark.cpp  LoadIdfFile_Benchmark.cpp  Workspace_Benchmark.cpp
